tests/should_fail/syntax_multiple_module_decls.nv
module syntax_multiple_module_decls

module second_module

import super.std.core

let x = 1
